tests/paczka1/small_fuzzy/28270839.err
Error in line 1: CDzeNdGto A805 5,5
Error in line 13: CDzeNdGto A465 48,0
